--- a/OpenAPLR-3.1.1_Vs2022/libs/dependencies/tesseract/libtesseract-DLL/libtesseract-DLL.vcxproj
+++ b/OpenAPLR-3.1.1_Vs2022/libs/dependencies/tesseract/libtesseract-DLL/libtesseract-DLL.vcxproj
@@ -684,6 +684,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <DisableSpecificWarnings>4244;4305;4018;4267;4996;4800;4005;4355;4099;4566;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>..\api;..\ccmain;..\ccutil;..\ccstruct;..\classify;..\cube;..\cutil;..\dict;..\neural_networks\runtime;..\textord;..\viewer;..\wordrec;..\..\include;..\..\include\leptonica;..\port;..\opencl;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalOptions>/source-charset:utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
