--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-full-screen": "^1.1.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.1",
+    "video.js": "^7.19.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
