--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.15.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.1",
+    "prisma": "^3.15.2"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
