--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# DATABASE_URL="mysql://root:root@desktop-rap5sa5.local:3306/lgeswa2023"
 DATABASE_URL="mysql://root:root@localhost:3306/lgeswa2022"
+# DATABASE_URL="mongodb://localhost:27017/lgeswa2022"
