--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^3.15.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.3",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "path": "^0.12.7"
@@ -22,6 +23,6 @@
     "prisma": "^3.15.2"
   },
   "prisma": {
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/license_plate.js"
   }
 }
