--- a/jwt_login/package.json
+++ b/jwt_login/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "node-js-jwt-auth",
+  "name": "js-jwt-auth",
   "version": "1.0.0",
   "description": "Node.js Demo for JWT Authentication",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [
     "node.js",
@@ -16,6 +17,7 @@
   "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -23,5 +25,6 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.3"
-  }
+  },
+  "devDependencies": {}
 }
