--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.3",
     "express": "^4.18.1",
+    "fast-levenshtein": "^3.0.0",
     "morgan": "^1.10.0",
     "path": "^0.12.7"
   },
