--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "dayjs": "^1.11.3",
     "express": "^4.18.1",
     "fast-levenshtein": "^3.0.0",
+    "mongodb": "^4.7.0",
+    "mongoose": "^6.4.2",
     "morgan": "^1.10.0",
     "path": "^0.12.7"
   },
