--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,11 @@
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.2",
     "morgan": "^1.10.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
+    "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1" 
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
