--- a/front-end/public/manifest.json
+++ b/front-end/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Minimal App",
-  "name": "React Material Minimal UI Kit",
+  "short_name": "LG Team 4",
+  "name": "LG SW Architect 2022 Team 4",
   "icons": [
     {
       "src": "favicon/android-chrome-192x192.png",
