--- a/server/conf/config.json
+++ b/server/conf/config.json
@@ -2,5 +2,6 @@
   "max_dist_levenshtein": 1,
   "expiration ": 4,
   "confidence" : "~1",
-  "rows" : 3
+  "rows" : 3,
+  "max_num_of_partial_match":10
 }
