--- a/server/package.json
+++ b/server/package.json
@@ -12,18 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.15.2",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.3",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fast-levenshtein": "^3.0.0",
+    "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.2",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "body-parser": "^1.20.0",
-    "dotenv": "^16.0.1",
-    "http": "0.0.1-security",
-    "jsonwebtoken": "^8.5.1" 
+    "ws": "^8.8.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
