--- a/front-end/package.json
+++ b/front-end/package.json
@@ -53,6 +53,7 @@
     "history": "^5.2.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
+    "precompiled-mqtt": "^4.3.13",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
