--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.15.2",
+    "aedes": "^0.47.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.3",
@@ -23,7 +24,9 @@
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.2",
     "morgan": "^1.10.0",
+    "mqtt": "^4.3.7",
     "path": "^0.12.7",
+    "websocket-stream": "^5.5.2",
     "ws": "^8.8.0"
   },
   "devDependencies": {
